client/style.css
/* CSS declarations go here */
body {
	font-family: monospace;
	font-size: 10pt;
	text-align: center;
}

#container {
	display: block;
	width: 480px;
	display: inline-block;
	background-color: #eee;
	text-align: left;
}

.pixDoc {
	background-color: #ddd;
	margin: 12px;
	border-bottom: 1px solid #ccc;
	border-right: 1px solid #ccc;
	padding: 6px;
	overflow-x: hidden;

}

h1 {
	font-family: sans-serif;
	padding-left: 18px;
}

.myPixInput {
	width: 468px;
	padding: 6px;
	margin-bottom: 12px;
	background-color: white;
	display: block;
}

.remove {
	background-color: orange;
	padding: 4px 8px;
	position: absolute;
	margin: -7px;
}

.paging {
	text-align: center;
}

.previous:hover, .next:hover {
	background-color: cyan;
}

.previous:active, .next:active {
	color: white;
	background-color: black;
}
figcaption {
	margin-bottom: 0px;
}

